room-service config modify

--- a/room-service.yml
+++ b/room-service.yml
@@ -3,10 +3,17 @@ my:
 
 db:
         connecting to mysql db
-        spring.datasource.url=jdbc:mysql://localhost:3306/pace_labs
-        spring.datasource.username=root
-        spring.datasource.password=shan@1234
-        spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-        spring.jpa.hibernate.ddl-auto=none
-        spring.jpa.show-sql=true
+
+Spring:
+        datasource:
+                url: jdbc:mysql://localhost:3306/pace_labs
+                username: root
+                password: shan@1234
+                driver-class-name: com.mysql.jdbc.Driver
+             
+       jpa:
+               hibernate:
+                       ddl-auto: none
+               show:-sql: true
+
 
