--- a/room-service.yml
+++ b/room-service.yml
@@ -1,3 +1,8 @@
+spring:
+        profiles:
+                active: local
+
+
 db:
         desc: room-service cloud config connected.....
         profile: local
